apps/cilium/resources/hostpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: "host-policy"
spec:
  nodeSelector: {}
  ingress:
    - fromEntities:
        - remote-node
        - host
    # Some traffic dosen't make it to the CT map for some reason so the responses get dropped. This is a very ugly hack to fix it
    - fromEntities:
        - cluster
      toPorts:
        - ports:
            - port: "32768"
              endPort: 65535
              protocol: "ANY"
    - toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "389" # LDAP
              protocol: TCP
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
            - port: "50000"
              protocol: TCP
            - port: "51820"
              protocol: UDP
    # Let metrics-server scrape the kubelet
    - toPorts:
        - ports:
            - port: "10250"
              protocol: TCP
      fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: metrics-server
    # Let hubble connect to the cilium agent
    - toPorts:
        - ports:
            - port: "4244"
              protocol: TCP
      fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: hubble-relay
    # Host networking metrics
    - toPorts:
        - ports:
            # Node Exporter
            - port: "9100"
              protocol: TCP
            # Cilium Agent
            - port: "9962"
              protocol: TCP
            # Cilium Operator
            - port: "9963"
              protocol: TCP
            # Cilium Envoy
            - port: "9964"
              protocol: TCP
            # Hubble
            - port: "9965"
              protocol: TCP
            # Kubelet
            - port: "10250"
              protocol: TCP
            # Kube Controller Manager
            - port: "10257"
              protocol: TCP
            # Kube Scheduler
            - port: "10259"
              protocol: TCP
      fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: prometheus-stack
            k8s:app.kubernetes.io/name: prometheus
    - toPorts:
        - ports:
            - port: "53"
              protocol: TCP
            - port: "53"
              protocol: UDP
      fromEntities:
          - cluster

    - icmps:
        - fields:
            - type: EchoRequest
              family: IPv4
